Added tutorial toolbar, seperated html & css

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ jquery.min.js
 jquery.qtip.min.js
 jquery.qtip.min.css
 bootstrap-tagsinput.css
+bootstrap-slider.min.css
+bootstrap-slider.min.js
 LGPL-LICENSE.txt
